[package]
name = "kubevirt-actions-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "env"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.84.0", default-features = false, features = ["derive", "client", "runtime", "rustls-tls"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["io-util", "macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
